--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
-description: This is the webpage of Sandhy Kashiv
-
+description: This is the offcial webpage of Sandhy Kashiv
+title: Sandhy Astrology
 
